# legendary-octo-sniffle

./: Dockerfile  migrate.sh  pyproject.toml  run.sh  test.sh
src/: __init__.py  db.sqlite3
src/backend/: decorators.py  settings.py  urls.py
src/social/: models.py  serializers.py  test.py  urls.py  views.py
src/social/migrations/: 0001_initial.py  0002_alter_follow_user_followed.py  0003_alter_follow_user_who_followed_alter_likes_post_id_and_more.py  0004_alter_post_comments.py
src/users/: models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_user_password_salt.py  0003_alter_user_password_salt.py  0004_alter_user_password_salt.py
